packages/rspack-test-tools/tests/configCases/errors/rspack-issue-4504/errors.js
module.exports = [
	[/Expected value to be one of "md4" or "xxhash64" at "output.hashFunction"/]
];
